<resources>
    <string name="app_name">Android-M03</string>
    <string name="wechat">Wechat</string>
    <string name="removeFragment">Remove All Fragments</string>
    <string name="replace">Replace</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="discover">Discover</string>
    <string name="me">Me</string>
    <string name="banner">Banner</string>
    <string name="bannerTxt">招商引资</string>
    <string name="returnBtn">pass message</string>
    <string name="chatsTxt">This is chats fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactsTxt">This is contacts fragment</string>
    <string name="discoverTxt">This is discover fragment</string>
    <string name="meTxt">This is me fragment</string>
    <string name="replaceTxt">This is replace fragment</string>
</resources>
