<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/wechat" />

        <Button
            android:id="@+id/removeAllFragmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/removeFragment" />

        <Button
            android:id="@+id/replaceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/replace" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bannerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:contentDescription="@string/banner"
            app:srcCompat="@drawable/banner" />


        <TextView
            android:id="@+id/bannerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:text="@string/bannerTxt" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bannerContainer"
        app:layout_constraintBottom_toTopOf="@id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/chats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/chats" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/contacts" />

        <TextView
            android:id="@+id/discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/discover" />

        <TextView
            android:id="@+id/me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/me" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>